Development
	Fix several bugs in dbus event processor
	Add the ability to set the onClick callback via a javascript method
0.0.7
	Add "debug" option to the embed tag so that we can watch output in certain test cases
	Detect ICY streams on download and switch them to streaming media
	Add embed command 'NoCache'
	Callback event "onDestroy"
	Add support for option "enableContextMenu"
	Add more callback events onmouseclick, onmousedown, onmouseup, onmouseover, onmouseout
	GUI message improvements
	Implement MediaComplete event and callback
	Implement Event handling from gnome-mplayer
	Added video/x-m4v mimetype, made a video at arstechnica work.
	Slow down the cache update messages to only 1 per 1/2 second
	Fix SetWindow return value, helps Opera some
	More safety checks in Write method
	Don't allow NULL filename
	When opening the media and no window has been set, tell gnome-mplayer to run hidden
	Fix problem with looping
	QuickTime Media Link Parsing Support now plays http://movies.yahoo.com/feature/transformers.html
0.0.6
    Debian-ized the package
    Another ASX fix, strip out invalid unicode characters
    More work on the ASX parser to handle XMLish URLs and not break
    Fix ASX parser to increment the entry pointer when we encounter a entry tag
        This used for single ASX files where the entry entity contains several
        ref tags all pointing to the same content
    Fix ASX parser to handle entryrefs which basically is a url to another 
        asx file that contains the same media at different sites (mirrors)
    If the local version of the url is requested but not found then use the url as the source
    Handle request for "Next" item off the playlist differently
    Implement ASX parser and extract the ASX fields out
    Switch from using dbus_connection_setup_with_g_main to 
        using our own dbus dispatcher but only when we can't connect to 
        g_main_loop. Fixes some trailers in Opera and in Firefox
0.0.5 (Not released)    