@@ -85,12 +85,17 @@ fi
 AC_SUBST(GECKO_XPIDL)
 AC_SUBST(GECKO_IDLDIR)
 
-
-
 PKG_CHECK_MODULES(DBUS, [dbus-1 >= 0.95 dbus-glib-1 >= 0.70])
 AC_SUBST(DBUS_CFLAGS)
 AC_SUBST(DBUS_LIBS)
 
+AC_ARG_ENABLE(caching,
+	AC_HELP_STRING([--disable-caching],[Disable caching of remote media to local storage]),
+	[usecache=$enableval],[usecache=yes])
+
+if test $usecache != yes; then
+	GECKO_CFLAGS="$GECKO_CFLAGS -DDISABLE_CACHE"
+fi
 
 AC_OUTPUT([
 Makefile
